# airflow_project_zoocamp

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt  teestscript.py  testPandas.ipynb  testpandas.ipynb  testscript.ipynb  testsqlAlchemy.ipynb
dags/: .airflowignore  configPostgress.yaml  dag_monthly_byke_from_web.py  dag_monthly_url_byke_from_web.py  dag_test_branching.py  dag_unzip_convert_to_parquet.py  dag_upload_data_file_byke_in_minio.py  data_file_info.py  dbinstance.py  listing_data.py  requirements.txt  settings.py  testpandas.py  utils.py  webparser_services.py
dags/conf/: conf2.yaml  configPostgress.yaml  credentials.json
dags/handler_services/: data_file_info.py  data_utlis_version_2.py  reader_config.py  utils_byke_data.py  utils_read_config.py  webparser_services.py
dags/handler_services/data_bike_services/: config_class.py  data_file_info.py
dags/handler_services/data_byke_services/: data_file_info.py  utils_bike_data.py  utils_byke_data.py
dags/handler_services/db_postgres_services/: dbinstance.py  models.py  steps.py  steps_db_queries.py  utils_db_instance.py
dags/handler_services/etl_services/: step_transfomr_data_bike.py  step_type.py  steps_data_transform.py  steps_utils_system.py  utils_data_transform.py  utlis_system.py
dags/handler_services/interfaces/: data_transformer.py
dags/handler_services/storage_services/: config_storage.py  minio_services.py  steps_storage_data_file.py  steps_store_data_file.py
dags/sql/: script_creat_table_data_info.sql
dockertest/: Dockerfile
(+1 files in other folders)
